[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scripts/playerKinematic.gd" type="Script" id=1]
[ext_resource path="res://Images/Character_Sprite_Yellow.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Particles/TrailEffect/trail_particles.tscn" type="PackedScene" id=3]
[ext_resource path="res://Images/Character_Sprite_Purple.png" type="Texture" id=4]
[ext_resource path="res://Scripts/CameraFocalPoint.gd" type="Script" id=5]
[ext_resource path="res://Images/Crosshair.png" type="Texture" id=6]
[ext_resource path="res://Scripts/AverageSpeedCalculator.gd" type="Script" id=7]

[sub_resource type="Animation" id=1]

resource_name = "CameraFall"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -3.80823, 180.044 ) ]
}

[sub_resource type="Animation" id=2]

resource_name = "CameraNormal"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 328.35, 1.85498 ) ]
}

[sub_resource type="Animation" id=3]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:collision_layer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:collision_mask")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 4 ) ]
}

[sub_resource type="Animation" id=4]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:collision_layer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:collision_mask")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}

[sub_resource type="CapsuleShape2D" id=5]

custom_solver_bias = 0.0
radius = 14.4681
height = 83.2394

[node name="player" type="KinematicBody2D"]

position = Vector2( -1.66478, 7.61046 )
input_pickable = false
collision_layer = 5
collision_mask = 5
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "collision" ]
GRAVITY = 3000.0
WALK_FORCE = 1500
WALK_MIN_SPEED = 300
WALK_MAX_SPEED = 1000
JUMP_SPEED = 1200
JUMP_MAX_AIRBORNE_TIME = 0.001
SLIDE_STOP_VELOCITY = 20.0
on_air_time = 2
isGreen = true
MAX_CAM_DISTANCE_H = 500
MAX_CAM_SPEED_H = 5
MAX_CAM_SPEED_V = 5

[node name="Sprite" type="Sprite" parent="." index="0"]

position = Vector2( 2.24448, -4.91766 )
scale = Vector2( 0.218893, 0.218893 )
texture = ExtResource( 2 )

[node name="TrailEffect" parent="Sprite" index="0" instance=ExtResource( 3 )]

show_behind_parent = true
position = Vector2( -2.75627, -84.2641 )
rotation = 1.54942
scale = Vector2( 1.7508, 1.7508 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="1"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/CameraFall = SubResource( 1 )
anims/CameraNormal = SubResource( 2 )
anims/SwitchOrangeToPurple = SubResource( 3 )
anims/SwitchPurpleToOrange = SubResource( 4 )
blend_times = [  ]

[node name="CameraFocalPoint" type="Node2D" parent="." index="2"]

script = ExtResource( 5 )

[node name="Crosshair" type="Sprite" parent="CameraFocalPoint" index="0"]

visible = false
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 6 )
_sections_unfolded = [ "Transform" ]

[node name="Camera2D" type="Camera2D" parent="CameraFocalPoint" index="1"]

anchor_mode = 1
rotating = true
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000001
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 0.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.0
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.0
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = true
_sections_unfolded = [ "Drag Margin", "Editor", "Limit", "Offset", "Smoothing", "Transform" ]

[node name="AverageSpeedCalculator" type="Node2D" parent="." index="3"]

script = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="4"]

position = Vector2( 2.62791, -6.313 )
shape = SubResource( 5 )

[connection signal="newCameraOffsetH" from="." to="CameraFocalPoint" method="_on_player_newCameraOffsetH"]

[connection signal="newCameraOffsetV" from="." to="CameraFocalPoint" method="_on_player_newCameraOffsetV"]

[connection signal="newSpeed" from="." to="AverageSpeedCalculator" method="_on_player_newSpeed"]

[connection signal="averageSpeed" from="AverageSpeedCalculator" to="." method="_on_AverageSpeedCalculator_averageSpeed"]


